--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -23,13 +23,13 @@
     padding: 10px 10px;
   "
 >
-  <form method="POST" action="{{ url_for('disease_recommend') }}">
+  <form method="POST" action="{{ url_for('disease-recommend') }}">
     <div class="form-group">
       <label for="Symptom1" style="font-size: 17px"
         ><b>Symptom 1</b></label
       >
       <select
-        name="symptomname"
+        name="symptom"
         class="form-control"
         id="symptom"
         placeholder="Select a symptom"
